Fix z-index problem on about me page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -57,10 +57,6 @@ body {
   max-width: 42em;
 }
 
-.card {
-  z-index: -10;
-}
-
 /*
  * Header
  */
@@ -242,3 +238,6 @@ body {
   margin-top: 55px;
 }
 
+.navbar.navbar-dark {
+  z-index: 15;
+}
